# defect_pipeline

./: .gitmodules
defect_localization/: CMakeLists.txt
defect_localization/config/: pipeline.yaml  prediction.yaml
defect_localization/include/defect_map/: json_persistence.hpp  map_store.hpp
defect_localization/launch/: mock_test_pipeline.launch.py
defect_localization/models/maskrcnn-height-curv-augmented-16/: config.yaml
defect_localization/scripts/: prediction_visualizer_node.py
defect_localization/src/defect_localization/: mock_image_catalog.cpp  mock_realsense_main.cpp  mock_snapshot_orchestrator.cpp
defect_localization/src/defect_map/: map_store.cpp
defect_map_interfaces/msg/: SegmentedInstance.msg
defect_map_interfaces/srv/: GetDefectMap.srv  GetDefects.srv  ProcessClusters.srv
demo/: CMakeLists.txt  package.xml  setup.py
demo/config/: cartesio_notebook_client.yaml  demo.yaml
demo/demo/: cartesio_notebook_client_node.py  joint_command_mux_node.py  orchestrator_node.py
demo/launch/: cartesio_notebook_client.launch.py  demo.launch.py  orchestrator.launch.py
demo/scripts/: cartesio_notebook_client_node  joint_command_mux_node  orchestrator_node
harmonic_world_pointcloud_generator/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
harmonic_world_pointcloud_generator/config/: defaults.yaml
harmonic_world_pointcloud_generator/harmonic_world_pointcloud_generator/: generator_node.py  pointcloud_utils.py  world_parser.py
harmonic_world_pointcloud_generator/launch/: generate_from_world.launch.py
harmonic_world_pointcloud_generator/worlds/: office.sdf  simple_room.sdf
interior_wall_extractor/: CMakeLists.txt  README.md  package.xml
interior_wall_extractor/config/: pipeline_params.yaml
interior_wall_extractor/launch/: interior_wall_pipeline.launch.py
interior_wall_extractor/scripts/: dbscan_node.py
interior_wall_extractor/src/: json_export_node.cpp  preprocess_node.cpp  ransac_node.cpp
interior_wall_extractor/srv/: ProcessPointCloud.srv
src/defect_localization/: CMakeLists.txt  package.xml
src/defect_localization/config/: defect_map.yaml  mock_pipeline.yaml
src/defect_localization/examples/: clear_defect_map.sh
src/defect_localization/include/defect_localization/: defect_localization_node.hpp  mock_image_catalog.hpp
src/defect_localization/include/defect_map/: clusterer_mock.hpp  defect_map_node.hpp  map_types.hpp
src/defect_localization/launch/: defect_map.launch.py  mock_test_pipeline.launch.py  pipeline.launch.py  prediction.launch.py  prediction_with_visualizer.launch.py
src/defect_localization/scripts/: detectron2_predictor_node.py
src/defect_localization/src/: defect_localization_main.cpp  defect_localization_node.cpp
src/defect_localization/src/defect_localization/: defect_localization_node.cpp  mock_realsense_main.cpp  mock_snapshot_orchestrator.cpp
src/defect_localization/src/defect_map/: clusterer_mock.cpp  defect_map_main.cpp  defect_map_node.cpp  json_persistence.cpp
src/defect_map_inference/: package.xml  setup.cfg  setup.py
src/defect_map_inference/config/: inference.yaml
src/defect_map_inference/defect_map_inference/: inference_node.py
src/defect_map_inference/launch/: inference.launch.py
src/defect_map_interfaces/: CMakeLists.txt  README.md  package.xml
src/defect_map_interfaces/msg/: DefectEntry.msg
src/defect_map_interfaces/srv/: AddDefects.srv  BuildMap.srv  CaptureShot.srv  ClearDefectMap.srv  LoadDefectMap.srv  RemoveDefects.srv  SaveDefectMap.srv  SegmentImage.srv
src/defect_map_pipeline/: CMakeLists.txt  package.xml
src/defect_map_pipeline/config/: pipeline.yaml  prediction.yaml
src/defect_map_pipeline/examples/: request_prediction.py
src/defect_map_pipeline/include/defect_map_pipeline/: defect_map_pipeline_node.hpp
src/defect_map_pipeline/launch/: pipeline.launch.py  prediction.launch.py  prediction_with_visualizer.launch.py
src/defect_map_pipeline/models/: README.md
src/defect_map_pipeline/models/maskrcnn-height-curv-augmented-16/: model_final.pth
src/defect_map_pipeline/scripts/: prediction_visualizer_node.py
src/defect_map_pipeline/src/: defect_map_pipeline_main.cpp  defect_map_pipeline_node.cpp
utils/: defect-pipeline.yaml
utils/concert_examples/: concert_defect_inspection.py
utils/concert_gazebo/: modular.launch.py
utils/concert_resources/: defect-inspection-tool-v1.json
wall_patch_planner/: CMakeLists.txt  README.md  package.xml  patcher_pseudocode.txt
wall_patch_planner/config/: wall_patch_filter_demo.yaml  wall_patch_planner.yaml
wall_patch_planner/launch/: wall_patch_planner.launch.py
wall_patch_planner/scripts/: trigger_plan.sh
wall_patch_planner/src/: mock_camera_info_pub.cpp  wall_patch_filter_demo_node.cpp  wall_patch_planner_node.cpp
wall_patch_planner/srv/: FilterWallPoses.srv
