<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo</name>
  <version>0.1.0</version>
  <description>Simulation and planning demo orchestrator for the defect pipeline.</description>
  <maintainer email="alessio.lovato@iit.it">Alessio Lovato</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>cartesian_interface_ros</depend>
  <depend>defect_map_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>lifecycle_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>wall_patch_planner</depend>
  <depend>xbot_msgs</depend>

  <exec_depend>concert_gazebo</exec_depend>
  <exec_depend>concert_navigation</exec_depend>
  <exec_depend>defect_localization</exec_depend>
  <exec_depend>harmonic_world_pointcloud_generator</exec_depend>
  <exec_depend>interior_wall_extractor</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
