<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interior_wall_extractor</name>
  <version>0.1.0</version>
  <description>Modular ROS 2 package for interior point cloud preprocessing, room clustering, semantic wall extraction, planar wall segmentation, and JSON export.</description>

  <maintainer email="alessio.lovato@iit.it">Alessio Lovato</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>python3-numpy</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3</exec_depend> 
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
