<?xml version="1.0"?>
<package format="3">
  <name>wall_patch_planner</name>
  <version>0.1.0</version>
  <description>Generates camera patch poses for selected room and wall ids from a labeled wall point cloud.</description>
  <maintainer email="alessio.lovato@iit.it">Alessio Lovato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
