<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>defect_map_inference</name>
  <version>0.1.0</version>
  <description>External Detectron2 inference service for defect mapping.</description>
  <maintainer email="alessio.lovato@iit.it">Alessio Lovato</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>defect_map_interfaces</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
